kubernetes/crypto-recommendation-service-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: crypto-recommendation-service
