kubernetes/crypto-recommendation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: crypto-recommendation-service-service
    namespace: crypto-recommendation-service
spec:
    selector:
        app: crypto-recommendation-service
    ports:
        -   protocol: TCP
            port: 80
            targetPort: 8080
    type: ClusterIP
