kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    namespace: crypto-recommendation-service
    annotations:
        nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
    ingressClassName: nginx
    rules:
        - host: ""
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: crypto-recommendation-service-service
                            port:
                                number: 80
